bleach.fish/src/index.css
* {
  background-color: black;
}

:root {
  --primary-color: rgb(172, 172, 172);
  --secondary-color: rgb(77, 77, 77);
}

body {
  margin: 2em;
  overflow: hidden;
  background-color: black;
}
@font-face {
  font-family: 'LoveLetter';
  src: url('/fonts/LoveLetterTW.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'blockzone';
  src: url('/fonts/blockzone.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
}

p, a {
  line-height: 1.3em;
  white-space: pre;
}

.h1 {
  font-size: 2em;
  margin-bottom: 15px;
  font-family: "LoveLetter";
  color: white;
}

.h2 {
  font-size: 2em;
  line-height: 1em;
  font-family: "LoveLetter";
  color: white;
}

.h3 {
  font-size: 1.5em;
  line-height: 1em;
  font-family: "LoveLetter";
  color: var(--primary-color);
}

.p {
  font-family: 'Times New Roman', Times, serif;
  font-size: 1.5em;
  color: 	white;
}

.blog-text {
  font-family: 'Times New Roman', Times, serif;
  font-size: 1.5em;
  color: 	white;
}

.postlink {
  line-height: 32px;
  display: block;
}

.meat a {
  display: block;
}

a:visited {
  color: white;
}

a:hover {
  color: gray;
  cursor: pointer;

}

a:active {
  color: white;
}

a {
  color: white;
}

.skin {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.cover {
  outline-style: solid;
  outline-color: var(--primary-color);
  ;
  outline-offset: 3px;
  outline-width: 1px;
  width: 150px;
}

.cover-static {
  outline-style: solid;
  outline-color: var(--primary-color);
  outline-offset: 3px;
  outline-width: 2px;
  width: 130px;
}

.cover:hover {
  outline-color: var(--secondary-color);
  outline-offset: 2px;
  outline-width: 1px;
}

.back-button {
  color: white;
  font-size: 1.5em;
  position: fixed;
  bottom: 20px;
  left: 30px;
}

.track-container {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.track-title {
  margin-left: 20px;
}


.wrapper {
  left: 40px;
  top: 40px;
  position: fixed;
}

@media (max-width: 668px) {

  .wrapper {
    padding: 25px;
    position: static;
  }

  .back-button {
    left: 25px;
  }

  .track-container {
    flex-direction: column;
    align-items: center;
  }


  .track-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100svh;
    flex-direction: column;  /* Stack items vertically */

  }
  .skin {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100svh;
  }

  .cover-static {
    width: 40%;
    margin-bottom: 20px;
  }
  

  .track-title {
    margin-left: 0;
    text-align: center;
  }
  
  .track-info {
    margin-top: 20px;
    text-align: center;
  }

  .blog-text {
    font-size: 1.1em;
  }

  .h2 {
    font-size: 1.5em;
  }

  .h3 {
    font-size: 1.4em;
  }
}

@media (max-width: 450px) {
  .cover {
    width: 60%;
    margin-bottom: 20px;
  }
}

